[SWPRIVATE-16] NA handling for Spark algorithms (#75)